--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>My-project</title>
-  <link rel="stylesheet" href="CSS/style.css">
-  <link rel="stylesheet" href="CSS/style-tablet.css">
-  <link rel="stylesheet" href="CSS/style-mobile.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style-tablet.css">
+  <link rel="stylesheet" href="css/style-mobile.css">
 </head>
 <body>
 <header class=header>
